projects/vb6parse/snapshots/parsers/cst/library/math/log/log_parentheses.snap
---
source: projects/vb6parse/tests/library/math/log.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: AssignmentStatement
      children:
        - kind: IdentifierExpression
          children:
            - kind: Identifier
              text: result
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: ParenthesizedExpression
          children:
            - kind: LeftParenthesis
              text: (
            - kind: CallExpression
              children:
                - kind: Identifier
                  text: Log
                - kind: LeftParenthesis
                  text: (
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: x
                - kind: RightParenthesis
                  text: )
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
