projects/vb6parse/snapshots/parsers/cst/library/math/log/log_select_case.snap
---
source: projects/vb6parse/tests/library/math/log.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: Whitespace
      text: "            "
    - kind: SelectCaseStatement
      children:
        - kind: SelectKeyword
          text: Select
        - kind: Whitespace
          text: " "
        - kind: CaseKeyword
          text: Case
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Log
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: IdentifierExpression
                      children:
                        - kind: Identifier
                          text: x
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: Whitespace
          text: "                "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IsKeyword
              text: Is
            - kind: Whitespace
              text: " "
            - kind: GreaterThanOperator
              text: ">"
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "0"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "                    "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: MsgBox
                    - kind: Whitespace
                      text: " "
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Greater than 1\""
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "                "
        - kind: CaseClause
          children:
            - kind: CaseKeyword
              text: Case
            - kind: Whitespace
              text: " "
            - kind: IsKeyword
              text: Is
            - kind: Whitespace
              text: " "
            - kind: LessThanOperator
              text: "<"
            - kind: Whitespace
              text: " "
            - kind: IntegerLiteral
              text: "0"
            - kind: Newline
              text: "\n"
            - kind: StatementList
              children:
                - kind: Whitespace
                  text: "                    "
                - kind: CallStatement
                  children:
                    - kind: Identifier
                      text: MsgBox
                    - kind: Whitespace
                      text: " "
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: StringLiteralExpression
                              children:
                                - kind: StringLiteral
                                  text: "\"Less than 1\""
                    - kind: Newline
                      text: "\n"
                - kind: Whitespace
                  text: "            "
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SelectKeyword
          text: Select
        - kind: Newline
          text: "\n"
    - kind: Whitespace
      text: "        "
